--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -5,7 +5,7 @@ master-3 ansible_host=192.168.100.13
 node-home ansible_host=192.168.100.14
 
 [controller]
-master-1
+localhost
 
 [all_hosts]
 master-1
