--- a/ansible/install_infra/roles/common-apt/tasks/main.yml
+++ b/ansible/install_infra/roles/common-apt/tasks/main.yml
@@ -11,11 +11,11 @@
     state: present
     filename: "debian"
   with_items:
-#    - "deb http://deb.debian.org/debian/ {{ ansible_lsb.codename }} main"
-#    - "deb-src http://deb.debian.org/debian/ {{ ansible_lsb.codename }} main"
-    - "deb http://deb.debian.org/debian/ {{ ansible_lsb.codename }}-updates main"
-    - "deb-src http://deb.debian.org/debian/ {{ ansible_lsb.codename }}-updates main"
-#    - "deb http://deb.debian.org/debian-security/ {{ ansible_lsb.codename }}/updates main"
-#    - "deb-src http://deb.debian.org/debian-security/ {{ ansible_lsb.codename }}/updates main"
-    - "deb http://deb.debian.org/debian {{ ansible_lsb.codename }}-backports main"
+    - "deb https://deb.debian.org/debian/ {{ ansible_lsb.codename }} main contrib non-free"
+    - "deb-src https://deb.debian.org/debian/ {{ ansible_lsb.codename }} main contrib non-free"
+    - "deb https://deb.debian.org/debian/ {{ ansible_lsb.codename }}-updates main contrib non-free"
+    - "deb-src https://deb.debian.org/debian/ {{ ansible_lsb.codename }}-updates main contrib non-free"
+    - "deb https://deb.debian.org/debian-security/ {{ ansible_lsb.codename }}-security main contrib non-free"
+    - "deb-src https://deb.debian.org/debian-security/ {{ ansible_lsb.codename }}-security main contrib non-free"
+    - "deb https://deb.debian.org/debian {{ ansible_lsb.codename }}-backports main contrib non-free"
   when: ansible_distribution == 'Debian'
