--- a/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
+++ b/ansible/inventories/vagrant/group_vars/all/kubernetes-infra.yml
@@ -8,7 +8,7 @@ metallb_ip_pools:
 kubernetes_nginx_ingress_lb_ip: 192.168.100.20
 kubernetes_lemonLdap_handler_lb_ip: 192.168.100.21
 kubernetes_openldap_lb_ip: 192.168.100.22
-kubernetes_pihole_lb_ip: 192.168.100.23
+kubernetes_dns_lb_ip: 192.168.100.23
 kubernetes_unifi_private_lb_ip: 192.168.100.24
 kubernetes_ingress_http_port: 80
 kubernetes_ingress_https_port: 443
