--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -35,6 +35,10 @@
   tags: kubernetes-app-infra-pihole
   when: pihole_enabled | bool
 
+- import_playbook: app-infra-blocky.yml
+  tags: kubernetes-app-infra-blocky
+  when: blocky_enabled | bool
+
 - import_playbook: app-infra-gotify.yml
   tags: kubernetes-app-infra-gotify
   when: gotify_enabled | bool
