--- a/ansible/inventories/vagrant/group_vars/all/apps/tool-olivetin.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/tool-olivetin.yml
@@ -3,6 +3,8 @@
 olivetin_images_to_download:
 - name: blocky.svg
   source: https://raw.githubusercontent.com/0xERR0R/blocky/master/docs/blocky.svg
+- name: wakeonlan.png
+  source: https://e7.pngegg.com/pngimages/745/164/png-clipart-wake-on-lan-electricity-computer-network-energy-generated-blue-computer-network.png
 
 olivetin_actions:
 - title: Blocky status
@@ -17,3 +19,15 @@ olivetin_actions:
       title: Duration (in minutes)
       type: int
       default: 5
+
+- title: Wake on Lan
+  icon: '<img src = "customIcons/wakeonlan.png" width = "48px" />'
+  shell: "{% raw %}wol {{ params }}{% endraw %}"
+  arguments:
+    - name: params
+      title: Host
+      choices:
+        - title: Host1
+          value: -h 192.168.x.xxx aa:bb:cc:dd:ee:ff
+        - title: Host2
+          value: -h 192.168.x.yyy aa:bb:cc:dd:ee:ff
