--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-apps.alerts.yaml
@@ -189,15 +189,16 @@
     for: 15m
     labels:
       severity: warning
-  - alert: KubeJobCompletion
+  - alert: KubeJobNotCompleted
     annotations:
       description: Job {{ $labels.namespace }}/{{ $labels.job_name }} is taking more
-        than 12 hours to complete.
-      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubejobcompletion
+        than {{ "43200" | humanizeDuration }} to complete.
+      runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubejobnotcompleted
       summary: Job did not complete in time
     expr: |
-      kube_job_spec_completions{job="kube-state-metrics"} - kube_job_status_succeeded{job="kube-state-metrics"}  > 0
-    for: 12h
+      time() - max by(namespace, job_name) (kube_job_status_start_time{job="kube-state-metrics"}
+        and
+      kube_job_status_active{job="kube-state-metrics"} > 0) > 43200
     labels:
       severity: warning
   - alert: KubeJobFailed
