--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-kubelet.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-system-kubelet.alerts.yaml
@@ -27,11 +27,11 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubelettoomanypods
       summary: Kubelet is running at capacity.
     expr: |
-      count by(node) (
+      count by(cluster, node) (
         (kube_pod_status_phase{job="kube-state-metrics",phase="Running"} == 1) * on(instance,pod,namespace,cluster) group_left(node) topk by(instance,pod,namespace,cluster) (1, kube_pod_info{job="kube-state-metrics"})
       )
       /
-      max by(node) (
+      max by(cluster, node) (
         kube_node_status_capacity{job="kube-state-metrics",resource="pods"} != 1
       ) > 0.95
     for: 15m
@@ -44,7 +44,7 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubenodereadinessflapping
       summary: Node readiness status is flapping.
     expr: |
-      sum(changes(kube_node_status_condition{status="true",condition="Ready"}[15m])) by (node) > 2
+      sum(changes(kube_node_status_condition{status="true",condition="Ready"}[15m])) by (cluster, node) > 2
     for: 15m
     labels:
       severity: warning
@@ -66,7 +66,7 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubeletpodstartuplatencyhigh
       summary: Kubelet Pod startup latency is too high.
     expr: |
-      histogram_quantile(0.99, sum(rate(kubelet_pod_worker_duration_seconds_bucket{job="kubelet", metrics_path="/metrics"}[5m])) by (instance, le)) * on(instance) group_left(node) kubelet_node_name{job="kubelet", metrics_path="/metrics"} > 60
+      histogram_quantile(0.99, sum(rate(kubelet_pod_worker_duration_seconds_bucket{job="kubelet", metrics_path="/metrics"}[5m])) by (cluster, instance, le)) * on(cluster, instance) group_left(node) kubelet_node_name{job="kubelet", metrics_path="/metrics"} > 60
     for: 15m
     labels:
       severity: warning
