--- a/ansible/install_applications/vars/tool-paperless.yml
+++ b/ansible/install_applications/vars/tool-paperless.yml
@@ -3,9 +3,9 @@
 _paperless_var_loader:
   namespace: "tool-paperless"
   base_image:
-    repo: "docker.io"
-    name: "jonaswinkler/paperless-ng"
-    tag: "1.5.0"
+    repo: "ghcr.io"
+    name: "paperless-ngx/paperless-ngx"
+    tag: "1.7.1"
   context_root: "{{ paperless_context_root | default('') }}"
 
 paperless:
@@ -112,7 +112,7 @@ _paperless_redis_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/redis"
-    tag: "6.2.6-alpine3.15"
+    tag: "6.2.7-alpine3.15"
 
 paperless_redis:
   base_image: "{{ _paperless_redis_var_loader.base_image }}"
