--- a/ansible/install_applications/vars/tool-syncthing.yml
+++ b/ansible/install_applications/vars/tool-syncthing.yml
@@ -9,7 +9,8 @@ _syncthing_var_loader:
   conf_injection_base_image:
     repo: "docker.io"
     name: "library/python"
-    tag: "3.9.11-alpine3.15"
+    tag: "3.10.4-alpine3.16"
+  context_root: "{{ syncthing_context_root | default('') }}"
 
 syncthing:
   enabled: "{{ syncthing_enabled | default(True) }}"
@@ -50,7 +51,7 @@ syncthing:
     limits_cpu: "{{ syncthing_container_limits_cpu | default('250m') }}"
     limits_memory: "{{ syncthing_container_limits_memory | default('64Mi') }}"
 
-  context_root: "{{ syncthing_context_root | default('') }}"
+  context_root: "{{ _syncthing_var_loader.context_root }}"
 
 
 # To avoid loops inside syncthing_discovery
