--- a/ansible/inventories/vagrant/group_vars/loadbalancers/nginx.yml
+++ b/ansible/inventories/vagrant/group_vars/loadbalancers/nginx.yml
@@ -375,6 +375,10 @@ nginx_sites:
         proxy_pass: https://kubernetes-https-ingress
         proxy_enable_websocket: True
         lemonLdap_protected: True
+        content: |
+          proxy_connect_timeout       900;
+          proxy_send_timeout          900;
+          proxy_read_timeout          900;
 
 nginx_streams:
   - name: home_mqtt
