--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -35,6 +35,10 @@
   tags: kubernetes-app-infra-blocky
   when: blocky_enabled | bool
 
+- import_playbook: app-infra-crowdsec.yml
+  tags: kubernetes-app-infra-crowdsec
+  when: crowdsec_enabled | bool
+
 - import_playbook: app-infra-ntfy.yml
   tags: kubernetes-app-infra-ntfy
   when: ntfy_enabled | bool
