--- a/ansible/install_applications/vars/infra-zonemta.yml
+++ b/ansible/install_applications/vars/infra-zonemta.yml
@@ -4,12 +4,9 @@ _zonemta_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/node"
-    tag: "17.7.2-alpine3.15"
-  # 3.2.4+ has issues with the API
-  # Each API call (prometheus metrics included) returns a 500
-  # 3.3.0+ crashes when a /metrics request is received : https://github.com/zone-eu/zone-mta/issues/291
-  # Still happens with 3.4.1
-  version: 3.2.3
+    # Zonemta 3.4.1 fails with "TypeError: Cannot set property closed of #<Readable> which has only a getter" under node >= 18.0.0
+    tag: "17.9.1-alpine3.15"
+  version: 3.4.1
   namespace: "infra-zonemta"
 
 zonemta:
@@ -62,7 +59,7 @@ _zonemta_mongo_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/mongo"
-    tag: "5.0.10-focal"
+    tag: "6.0.2-focal"
 
 zonemta_mongo:
   base_image: "{{ _zonemta_mongo_var_loader.base_image }}"
@@ -96,7 +93,7 @@ _zonemta_redis_var_loader:
   base_image:
     repo: "docker.io"
     name: "library/redis"
-    tag: "7.0.4-alpine3.16"
+    tag: "7.0.5-alpine3.16"
 
 zonemta_redis:
   base_image: "{{ _zonemta_redis_var_loader.base_image }}"
