--- a/ansible/install_applications/vars/monitoring-nginx-log-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-nginx-log-exporter.yml
@@ -4,7 +4,7 @@ _nginx_log_exporter_var_loader:
   base_image:
     repo: quay.io
     name: "martinhelmich/prometheus-nginxlog-exporter"
-    tag: "v1.9.2"
+    tag: "v1.10.0-amd64"
 
 nginx_log_exporter:
   enabled: "{{ nginx_log_exporter_enabled | default(True) }}"
