--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.alerts.yaml
@@ -8,11 +8,11 @@
       summary: Filesystem is predicted to run out of space within the next 24 hours.
     expr: |
       (
-        node_filesystem_avail_bytes{job="node-exporter",fstype!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!=""} * 100 < 15
+        node_filesystem_avail_bytes{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 15
       and
-        predict_linear(node_filesystem_avail_bytes{job="node-exporter",fstype!=""}[6h], 24*60*60) < 0
+        predict_linear(node_filesystem_avail_bytes{job="node-exporter",fstype!="",mountpoint!=""}[6h], 24*60*60) < 0
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 1h
     labels:
@@ -25,11 +25,11 @@
       summary: Filesystem is predicted to run out of space within the next 4 hours.
     expr: |
       (
-        node_filesystem_avail_bytes{job="node-exporter",fstype!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!=""} * 100 < 10
+        node_filesystem_avail_bytes{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 10
       and
-        predict_linear(node_filesystem_avail_bytes{job="node-exporter",fstype!=""}[6h], 4*60*60) < 0
+        predict_linear(node_filesystem_avail_bytes{job="node-exporter",fstype!="",mountpoint!=""}[6h], 4*60*60) < 0
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 1h
     labels:
@@ -42,9 +42,9 @@
       summary: Filesystem has less than 5% space left.
     expr: |
       (
-        node_filesystem_avail_bytes{job="node-exporter",fstype!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!=""} * 100 < 5
+        node_filesystem_avail_bytes{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 5
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 30m
     labels:
@@ -57,9 +57,9 @@
       summary: Filesystem has less than 3% space left.
     expr: |
       (
-        node_filesystem_avail_bytes{job="node-exporter",fstype!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!=""} * 100 < 3
+        node_filesystem_avail_bytes{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_size_bytes{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 3
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 30m
     labels:
@@ -72,11 +72,11 @@
       summary: Filesystem is predicted to run out of inodes within the next 24 hours.
     expr: |
       (
-        node_filesystem_files_free{job="node-exporter",fstype!=""} / node_filesystem_files{job="node-exporter",fstype!=""} * 100 < 40
+        node_filesystem_files_free{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_files{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 40
       and
-        predict_linear(node_filesystem_files_free{job="node-exporter",fstype!=""}[6h], 24*60*60) < 0
+        predict_linear(node_filesystem_files_free{job="node-exporter",fstype!="",mountpoint!=""}[6h], 24*60*60) < 0
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 1h
     labels:
@@ -89,11 +89,11 @@
       summary: Filesystem is predicted to run out of inodes within the next 4 hours.
     expr: |
       (
-        node_filesystem_files_free{job="node-exporter",fstype!=""} / node_filesystem_files{job="node-exporter",fstype!=""} * 100 < 20
+        node_filesystem_files_free{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_files{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 20
       and
-        predict_linear(node_filesystem_files_free{job="node-exporter",fstype!=""}[6h], 4*60*60) < 0
+        predict_linear(node_filesystem_files_free{job="node-exporter",fstype!="",mountpoint!=""}[6h], 4*60*60) < 0
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 1h
     labels:
@@ -106,9 +106,9 @@
       summary: Filesystem has less than 5% inodes left.
     expr: |
       (
-        node_filesystem_files_free{job="node-exporter",fstype!=""} / node_filesystem_files{job="node-exporter",fstype!=""} * 100 < 5
+        node_filesystem_files_free{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_files{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 5
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 1h
     labels:
@@ -121,9 +121,9 @@
       summary: Filesystem has less than 3% inodes left.
     expr: |
       (
-        node_filesystem_files_free{job="node-exporter",fstype!=""} / node_filesystem_files{job="node-exporter",fstype!=""} * 100 < 3
+        node_filesystem_files_free{job="node-exporter",fstype!="",mountpoint!=""} / node_filesystem_files{job="node-exporter",fstype!="",mountpoint!=""} * 100 < 3
       and
-        node_filesystem_readonly{job="node-exporter",fstype!=""} == 0
+        node_filesystem_readonly{job="node-exporter",fstype!="",mountpoint!=""} == 0
       )
     for: 1h
     labels:
