--- a/apps/base/logging-elasticsearch/deploy/elasticsearch/statefulSet.yaml
+++ b/apps/base/logging-elasticsearch/deploy/elasticsearch/statefulSet.yaml
@@ -76,6 +76,7 @@ spec:
           - name: PROCESSORS
             valueFrom:
               resourceFieldRef:
+                divisor: '1'
                 resource: limits.cpu
       initContainers:
       - name: fix-permissions
