--- a/apps/base/dev-argo-cd/deploy/config/argocd.env
+++ b/apps/base/dev-argo-cd/deploy/config/argocd.env
@@ -12,3 +12,9 @@ kustomize.buildOptions=--enable-alpha-plugins --enable-exec
 # Track using annotation to avoid conflicts on the default "app.kubernetes.io/instance" label
 # Seel : https://argo-cd.readthedocs.io/en/stable/user-guide/resource_tracking/#additional-tracking-methods-via-an-annotation
 application.resourceTrackingMethod=annotation
+
+# Application reconciliation timeout is the max amount of time required to discover if a new manifests version got
+# published to the repository. Reconciliation by timeout is disabled if timeout is set to 0. Three minutes by default.
+# > Note: argocd-repo-server deployment must be manually restarted after changing the setting.
+# As we trigger our deployments using argo workflows, we don't need frequent polling, so lower it to 2h
+timeout.reconciliation=2h
