--- a/apps/vagrant/cluster-intel-gpu-plugin/application.yaml
+++ b/apps/vagrant/cluster-intel-gpu-plugin/application.yaml
@@ -7,7 +7,7 @@ metadata:
   #finalizers:
   #  - resources-finalizer.argocd.argoproj.io
   labels:
-    app.kubernetes.io/name: reflector
+    app.kubernetes.io/name: intel-gpu-plugin
 spec:
   project: k8s-cluster
 
